@@ -132,6 +132,7 @@ ToDo/Notes:
 	  inode.h and make fs/ntfs/inode.c::__ntfs_init_inode() non-static and
 	  add a declaration for it to inode.h.  Fix some compilation issues
 	  that resulted due to #includes and header file interdependencies.
+	- Simplify setup of i_mode in fs/ntfs/inode.c::ntfs_read_locked_inode().
 
 2.1.20 - Fix two stupid bugs introduced in 2.1.18 release.
 
